--- a/DijaGoldPOS.API/DijaGoldPOS.API.csproj
+++ b/DijaGoldPOS.API/DijaGoldPOS.API.csproj
@@ -24,6 +24,8 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
+    <PackageReference Include="EPPlus" Version="7.0.5" />
+    <PackageReference Include="QuestPDF" Version="2023.12.6" />
   </ItemGroup>
 
 </Project>
