--- a/DijaGoldPOS.API/appsettings.json
+++ b/DijaGoldPOS.API/appsettings.json
@@ -130,8 +130,17 @@
     "Density": 8
   },
   "Cors": {
-    "AllowedOrigins": [ "http://localhost:3000", "https://localhost:3000", "http://localhost:3001", "https://localhost:3001" ],
-    "ExposedHeaders": [ "X-Correlation-Id" ]
+    "AllowedOrigins": [
+      "http://localhost:3000",
+      "http://localhost:3001",
+      "https://localhost:3000",
+      "https://localhost:3001"
+    ],
+    "ExposedHeaders": [
+      "X-Total-Count",
+      "X-Pagination",
+      "X-Correlation-Id"
+    ]
   },
   "AllowedHosts": "*"
 }
