--- a/DIjaGoldPOS.System.UI/package.json
+++ b/DIjaGoldPOS.System.UI/package.json
@@ -56,13 +56,19 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5",
     "vaul": "^0.7.9",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
+    "eject": "react-scripts eject",
+    "e2e": "playwright test",
+    "e2e:ui": "playwright test --ui",
+    "e2e:report": "playwright show-report",
+    "e2e:install": "playwright install --with-deps"
   },
   "eslintConfig": {
     "extends": [
@@ -83,8 +89,10 @@
     ]
   },
   "devDependencies": {
+    "@playwright/test": "^1.46.0",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
+    "@types/xlsx": "^0.0.35",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6"
